--- a/fdj/apps/fdj-ng/src/app/app.component.html
+++ b/fdj/apps/fdj-ng/src/app/app.component.html
@@ -1,1 +1,14 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<div class="app-container">
+  <app-input-select
+  class="input-league"
+  placeholder="Search by league"
+  [options]="leaguesOptions"
+  [formControl]="selectedLeagueIdControl">
+  </app-input-select>
+
+  @if (selectedLeagueIdControl.value) {
+    <div class="full-width">
+      <router-outlet></router-outlet>
+    </div>
+  }
+</div>
