--- a/fdj/apps/fdj-ng/src/app/components/team/team.component.scss
+++ b/fdj/apps/fdj-ng/src/app/components/team/team.component.scss
@@ -1,3 +1,29 @@
+.team-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 60px;
+  background-color: white;
+
+  .back-button {
+    position: absolute;
+    left: 8px;
+    background-color: white;
+    border: none;
+    font-size: 12px;
+    color: #76adea;
+  }
+
+  h4 {
+    font-size: 16px;
+    padding: 8px;
+    margin: 0;
+  }
+}
+
 .team-container {
   display: flex;
   flex-direction: column;
@@ -29,5 +55,11 @@
         margin: 0;
       }
     }
+  }
+
+  .no-result {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
