--- a/fdj/apps/fdj-ng/src/app/components/team/team.component.html
+++ b/fdj/apps/fdj-ng/src/app/components/team/team.component.html
@@ -3,7 +3,7 @@
     <span class="bi-chevron-left"></span>
     Back
   </button>
-  <h4>{{ team?.name }}</h4>
+  <h4>{{ team.name }}</h4>
 </div>
 
 <div class="team-container">
