--- a/fdj/apps/fdj-ng/src/app/shared/components/input-select/input-select.component.scss
+++ b/fdj/apps/fdj-ng/src/app/shared/components/input-select/input-select.component.scss
@@ -71,6 +71,11 @@
       cursor: pointer;
     }
 
+    &.selectable {
+      background-color: #f5f5f5;
+      cursor: pointer;
+    }
+
     &.pointer-none {
       cursor: default;
       pointer-events: none;
